--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -6,7 +6,7 @@
             "second": " años de experiencia en el mundo Web."
         },
         "status": {
-            "aviable": "Disponible",
+            "aviable": "Disponible para trabajar",
             "listing": "Escuchando ofertas",
             "working": "Trabajando"
         },
